# python.copier

./: .gitignore  .pre-commit-config.yaml  README.md  copier.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
extensions/: context.py  slugify.py
template/: .gitlab-ci.yml  .pre-commit-config.yaml.jinja  README.md.jinja  mkdocs.yml.jinja  pyproject.toml.jinja  {% if has_docs %}mkdocs.yml{% endif %}.jinja  {{_copier_conf.answers_file}}.jinja
template/.github/workflows/: ci.yml
template/tests/: test_{{python_package}}.py.jinja
template/{{package_path}}/: _version.py.jinja
tests/: conftest.py  test_template.py
tests/data/defaults/: .copier-answers.yml  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml  tox.ini
tests/data/defaults/src/test_project/: _version.py
tests/data/gitlab/: .copier-answers.yml  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml
tests/data/gitlab/src/test_project/: _version.py
tests/data/gitlab/tests/: test_test_project.py
tests/data/no-src/: .copier-answers.yml  README.md  pyproject.toml
tests/data/no-src/.github/workflows/: ci.yml
tests/data/no-src/tests/: test_test_project.py
tests/data/with-docs/: .copier-answers.yml  .pre-commit-config.yaml  mkdocs.yml  pyproject.toml  tox.ini
