[project]
name = "python.copier"
description = "My Copier template for Python projects"
authors = [
    {name = "Axel Haustant", email = "noirbizarre@users.noreply.github.com"},
]
dependencies = [
    "copier>=9.1.0",
    "copier-templates-extensions>=0.3.0",
]
requires-python = ">=3.8,<4.0"
license = {text = "MIT"}
dynamic = ["version"]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.3.2",
    "pytest-sugar>=0.9.7",
    "pytest-datadir>=1.4.1",
    "pytest-freezer>=0.4.7",
    "pytest-copier>=0.3.0",
    "emotional",
]


[tool.pdm.scripts]
test.help = "Run the test suite"
test.cmd = "pytest"

lint.help = "Lint all tracked files"
lint.cmd = "pre-commit run -a"

commit.help = "Lint all tracked files"
commit.cmd = "cz commit"


[tool.pytest.ini_options]
addopts = "-ra"
norecursedirs = ".git build dist data"
testpaths = [
  "tests/",
]


[tool.commitizen]
name = "emotional"
github = "noirbizarre/python.copier"
order_by_scope = true
version_provider = "scm"


[tool.black]
# Black adds 10% tolernace which makes it to 110
# See:
#  https://black.readthedocs.io/en/stable/the_black_code_style/current_style.html#line-length
line-length = 100


[tool.ruff]
line-length = 110
respect-gitignore = true
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # McCabe # fake8-comprehension
    "C",
    # Pyupgrade
    "UP",
    # isort
    "I001"
]
src = [".", "tests"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.isort]
known-third-party = ["pytest", "pytest_dir_equal", "pytest_copier"]
lines-between-types = 1
